--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
   <head>
     <title>Tasklist</title>
     <%= csrf_meta_tags %>
+<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
+    
+<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <div class="container">
-<%= render 'layout/flash_tasks' %>
+<%= render 'layouts/flash_tasks' %>
+
 <%= yield %>
     </div>
   </body>
