--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,14 +1,5 @@
 <h1>タスク記録追加</h1>
 
-<%= form_for(@task) do |f| %>
-
-<%= f.label :content, '内容' %>
-
-<%= f.text_field :content %>
-
-
-<%= f.submit '記録する' %>
-
-<% end %>
+<%= render 'form', task: @task %>
 
 <%= link_to '一覧に戻る', tasks_path %>
