--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,42 +1,40 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6"
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
     <%= form_for(task) do |f| %>
     
     <% if task.errors.any? %>
     
-        <div id="error_explanation">
-          <ul>
+      <div id="error_explanation">
+        <ul>
             
-    <% task.errors.full_messages.each do |task| %>
+          <% task.errors.full_messages.each do |task| %>
     
-              <li>
-    <%= task %>
-    </li>
+          <li><%= task %></li>
             
-    <% end %>
+          <% end %>
     
-          </ul>
-        </div>
+        </ul>
+      </div>
       
     <% end %>
     
     <div class="form-group">
     
-    <%= f.label :content, '記録内容' %>
+      <%= f.label :content, '記録内容' %>
     
-    <%= f.text_field :content, class: 'form-control' %>
+      <%= f.text_field :content, class: 'form-control' %>
     
     </div>
     <div class="form-group">
     
-    <%= f.label :status, 'ステータス' %>
+      <%= f.label :status, 'ステータス' %>
     
-    <%= f.text_field :status, class: 'form-control' %>
+      <%= f.text_field :status, class: 'form-control' %>
     
     </div>
     
-    <%= f.submit '記録する' %>
+      <%= f.submit '記録する' %>
     
-    <% end %>
+      <% end %>
   </div>
 </div>
