--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,19 @@
     
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to '新しいタスクを追加', new_task_path %></li>
+          <% if logged_in? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to '自分のタスク管理ページへ', user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+              </ul>
+            </li>
+          <% else %>
+          <li><%= link_to 'ログイン', login_path %></li>
+          <li><%= link_to '登録', signup_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
