--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,23 @@
 <div class="row">
-  <aside class="col-xs-4">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title"><%= @user.name %></h3>
-      </div>
-    </div>
-  </aside>
   <div class="col-xs-8">
-    <ul class="nav nav-tabs nav-justified">
-      <li>ここにタスクリストが入る</li>
-    </ul>
+    <h1>タスクリスト</h1>
+
+      <ul>
+        
+      <% @task.each do |task| %>
+        
+        <li>
+          <%= link_to task.id, task %>
+          :
+          <%= task.status %>
+           &gt;
+          <%= task.content %>
+        </li>
+        
+      <% end %>
+        
+      </ul>
+
+<%= link_to 'タスクを追加', new_task_path %>
   </div>
 </div>
