--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,19 +1,19 @@
 <h1>タスクリスト</h1>
 
-<ul>
+  <ul>
   
-<% @task.each do |task| %>
-  
+  <% @tasks.each do |task| %>
+    
     <li>
-<%= link_to task.id, task %>
-:
-<%= task.status %>
- &gt;
-<%= task.content %>
-</li>
-  
-<% end %>
-  
-</ul>
+      <%= link_to task.id, task %>
+      :
+      <%= task.status %>
+       &gt;
+      <%= task.content %>
+    </li>
+    
+  <% end %>
+    
+  </ul>
 
 <%= link_to 'タスクを追加', new_task_path %>
